plugins {
    id 'java'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation project(path: ":ddprof-lib", configuration: 'debug')
    testImplementation project(path: ":ddprof-test-tracer")

    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
    testImplementation 'org.slf4j:slf4j-simple:1.7.32'
    testImplementation 'org.openjdk.jmc:flightrecorder:8.1.0'
    testImplementation 'org.openjdk.jol:jol-core:0.16'
    // https://mvnrepository.com/artifact/org.junit-pioneer/junit-pioneer
    testImplementation group: 'org.junit-pioneer', name: 'junit-pioneer', version: '1.9.1'

    testImplementation group: 'org.lz4', name: 'lz4-java', version: '1.8.0'
    testImplementation group: 'org.xerial.snappy', name: 'snappy-java', version: '1.1.10.1'
    testImplementation group: 'com.github.luben', name: 'zstd-jni', version: '1.5.5-4'


}

test {
    onlyIf {
        !project.hasProperty('skip-tests')
    }
    useJUnitPlatform()

    jvmArgs '-Djdk.attach.allowAttachSelf', '-Djol.tryWithSudo=true'
}

tasks.withType(Test) {
    onlyIf {
        !project.hasProperty('skip-tests')
    }
    def javaHome = System.getenv("JAVA_TEST_HOME")
    if (javaHome == null) {
        javaHome = System.getenv("JAVA_HOME")
    }
    executable = new File("${javaHome}", 'bin/java')
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.addAll(['--release', '8'])

    if (name == "compileTestJava") {
        sourceCompatibility = '8'
        targetCompatibility = '8'
    }
}